force-app/main/default/objects/Forecast_Accuracy__c/Forecast_Accuracy__c.object-meta.xml
<CustomObject>
    <description>Back-test record: predicted vs actual signings for a closed forecast horizon, so model trust is measurable over time.</description>
    <label>Forecast Accuracy</label>
    <nameField>
        <displayFormat>FA-{0000}</displayFormat>
        <label>Accuracy Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forecast Accuracies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>