force-app/main/default/objects/Forecast_Accuracy__c/fields/Actual__c.field-meta.xml
<CustomField>
    <fullName>Actual__c</fullName>
    <description>Signings that actually occurred in the window.</description>
    <label>Actual</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>