force-app/main/default/objects/Forecast_Accuracy__c/fields/Error_Pct__c.field-meta.xml
<CustomField>
    <fullName>Error_Pct__c</fullName>
    <description>Absolute percent error of predicted vs actual.</description>
    <label>Error Pct</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>