force-app/main/default/objects/Forecast_Accuracy__c/fields/Forecast__c.field-meta.xml
<CustomField>
    <fullName>Forecast__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The forecast being back-tested.</description>
    <label>Forecast</label>
    <referenceTo>Conversion_Forecast__c</referenceTo>
    <relationshipLabel>Accuracy Records</relationshipLabel>
    <relationshipName>Accuracy_Records</relationshipName>
    <type>Lookup</type>
</CustomField>