force-app/main/default/objects/Forecast_Accuracy__c/fields/Predicted__c.field-meta.xml
<CustomField>
    <fullName>Predicted__c</fullName>
    <description>Signings the forecast predicted.</description>
    <label>Predicted</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>